--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: George-Thomas Beazley | Game Programmer
 email: "gt.beazley00@gmail.com"
 description: >- # this means to ignore newlines until "baseurl:"
-  A Bootstrap 4 start up project for Jekyll and Github Pages
+  George-Thomas Beazley's website show casing his work in game programming
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
@@ -31,6 +31,7 @@ plugins:
 
 # A list of the pages to display in the navigation bar
 header_pages:
+  -index.md
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
